added resolvers to ensure data is there when needed

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -25,7 +25,7 @@
   </p>
 </footer>
 
-<ng-container *ngIf="(busy | async) === true">
+<ng-container *ngIf="busy === true">
   <div class="backdrop"></div>
   <div class="busy">Arbeite...</div>
 </ng-container>
