--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -4,7 +4,7 @@
 </ng-container>
 <ng-container *ngIf="allowedMonths.length > 0">
     <button type="button" class="card selectable" (click)="show = 'names'">Sachliche Richtigkeit</button>
-    <button type="button" class="card selectable" (click)="show = 'numbers'">Rechnerische Richtigkeit</button>
+    <button type="button" class="card selectable" [routerLink]="['numbers']">Rechnerische Richtigkeit</button>
     <button type="button" class="card selectable" [routerLink]="['utilization']">Vertragsauslastung</button>
     <button type="button" class="card selectable" (click)="show = 'trend'">Zeitlicher Verlauf</button>
     <h2>Export</h2>
@@ -90,94 +90,6 @@
                             [attr.aria-label]="row.rejected ? 'Zur&uuml;ckgewiesen' : 'Akzeptiert'"
                             (click)="row.rejected = !row.rejected"></button>
                         {{row.text}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="overlay" *ngIf="show === 'numbers'">
-        <button type="button" class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</button>
-        <h1>
-            {{contract.name}}
-        </h1>
-        <p class="center">
-            {{contract.description}}
-        </p>
-        <p>
-            Diese Ansicht erlaubt die Pr&uuml;fung der rechnerischen Richtigkeit einer Rechnung. Sind die angezeigten Summen identisch
-            mit den Summen der Rechnung, wurde durch einen zweiten Rechnungsweg gepr&uuml;ft, dass die Rechnung rechnerisch richtig ist.
-        </p>
-        <p>
-            Voraussetzung ist, dass vorher die Eintr&auml;ge sachlich gepr&uuml;ft und ggf. nicht zutreffende Eintr&auml;ge entfernt wurden.
-        </p>
-        <div class="side-by-side">
-            <div class="card">
-                Leistungszeitraum:
-                <select [(ngModel)]="selectedMonth" class="selectable" style="min-width: 6rem;">
-                    <option *ngFor="let month of allowedMonths" [value]="month">
-                        {{month}}
-                    </option>
-                </select>
-            </div>
-            <div>
-                <button type="button" class="card selectable" (click)="exportNumbers()">Zeitraum nach Excel exportieren</button>
-            </div>
-        </div>
-        <table class="center">
-            <thead>
-                <tr>
-                    <th>Preiskategorie</th>
-                    <th>PT</th>
-                    <th>Stunden</th>
-                    <th>Kosten</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let entry of priceCategorySums">
-                    <td>
-                        {{entry[0]}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].days | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].days * 8 | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="right">
-                        {{entry[1].price | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <b>Summe (netto)</b>
-                    </td>
-                    <td class="right">
-                        {{sumDays | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="right">
-                        {{sumDays * 8 | number: '1.2-2':'de'}}
-                    </td>
-                    <td class="right">
-                        {{sum | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        MWSt
-                        <input type="number" required="true" [(ngModel)]="taxRate" class="right">
-                        %
-                    </td>
-                    <td class="right">
-                        {{tax | number: '1.2-2':'de'}} &#8364;
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        <b>Summe (brutto)</b>
-                    </td>
-                    <td class="right">
-                        <b>{{(sum + tax) | number: '1.2-2':'de'}} &#8364;</b>
                     </td>
                 </tr>
             </tbody>
