--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -95,6 +95,7 @@ th {
 
 button.card {
     height: unset;
+    border: 1px solid #222;
 }
 
 .selectable {
@@ -276,3 +277,13 @@ footer {
 
 }
 
+/* Accessibility tricks */
+.visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+  }
