working on trend

--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -6,86 +6,7 @@
     <button type="button" class="card selectable" [routerLink]="['names']">Sachliche Richtigkeit</button>
     <button type="button" class="card selectable" [routerLink]="['numbers']">Rechnerische Richtigkeit</button>
     <button type="button" class="card selectable" [routerLink]="['utilization']">Vertragsauslastung</button>
-    <button type="button" class="card selectable" (click)="show = 'trend'">Zeitlicher Verlauf</button>
+    <button type="button" class="card selectable" [routerLink]="['trend']">Zeitlicher Verlauf</button>
     <h2>Export</h2>
     <button type="button" class="card selectable" (click)="exportAllNumbers()">Leistungsnachweise nach Excel</button>
-</ng-container>
-
-<ng-container *ngIf="show !== 'nothing'">
-    <div class="backdrop" (click)="show = 'nothing'"></div>
-
-    <div class="overlay" *ngIf="show === 'trend'">
-        <div class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</div>
-        <h1>
-            {{contract.name}}
-        </h1>
-        <p class="center">
-            {{contract.description}}
-        </p>
-        <p>
-            Diese Ansicht zeigt den detaillierten zeitlichen Verlauf der Leistungen und erlaubt, Fehlentwicklungen fr&uuml;zeitig zu erkennen.
-            Die angezeigten Prozentzahlen werden in Relation zur Vertragsdauer  bewertet. Rote Balken bedeuten,
-            dass in diesem Monat das durchschnittlich zur Verf&uuml;gung stehende Budget &uuml;berschritten wurde.
-        </p>
-        <table class="center">
-            <thead>
-                <tr>
-                    <th rowspan="2">Leistungszeitraum</th>
-                    <th rowspan="2" class="no-wrap">geleistete PT</th>
-                    <th class="no-wrap center" [attr.colspan]="contract.budgetDetails.length + 1">% Auslastung</th>
-                </tr>
-                <tr>
-                    <th>Gesamt</th>
-                    <th class="no-wrap" *ngFor="let detail of contract.budgetDetails">
-                        {{detail.priceCategory}}
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let month of allowedMonths">
-                    <td>
-                        {{month.split('-')[1]}}/{{month.split('-')[0]}}
-                    </td>
-                    <td class="no-wrap right">
-                        {{getDaysForMonth(month) | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{getDaysPercentageForMonth(month) | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: getDaysPercentageForMonth(month) > getmonthPercentageForContract(month)}"
-                            [ngStyle]="{width: (getDaysPercentageForMonth(month) | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                    <td class="no-wrap right rel" *ngFor="let detail of contract.budgetDetails">
-                        {{getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) > getmonthPercentageForContract(month)}"
-                            [ngStyle]="{width: (getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Gesamt</b></td>
-                    <td class="no-wrap right">
-                        {{totalDays | number: '1.3-3':'de'}}
-                    </td>
-                    <td class="no-wrap right rel">
-                        {{totalSum / contract.completeBudget.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * totalSum / contract.completeBudget.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * totalSum / contract.completeBudget.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                    <td class="no-wrap right rel" *ngFor="let detail of contract.budgetDetails">
-                        {{detail.availableFinances === 0 ? '-' : getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances * 100 | number: '1.1-1':'de'}} %
-                        <div class="gauge"
-                            [ngClass]="{red: 100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances > partOfTime}"
-                            [ngStyle]="{width: (100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances | number:'1.0-0') + '%'}">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
 </ng-container>
