--- a/frontend/src/app/contract-trend/contract-trend.component.html
+++ b/frontend/src/app/contract-trend/contract-trend.component.html
@@ -1,1 +1,78 @@
-<p>contract-trend works!</p>
+<header>
+    <h1>
+        {{(contract | async)?.name}}
+    </h1>
+    <p class="center">
+        {{(contract | async)?.description}}
+    </p>
+    <p>
+        Diese Ansicht zeigt den detaillierten zeitlichen Verlauf der Leistungen und erlaubt, Fehlentwicklungen fr&uuml;zeitig zu erkennen.
+        Die angezeigten Prozentzahlen werden in Relation zur Vertragsdauer  bewertet. Rote Balken bedeuten,
+        dass in diesem Monat das durchschnittlich zur Verf&uuml;gung stehende Budget &uuml;berschritten wurde.
+    </p>
+</header>
+<main>
+    <table class="center">
+        <thead>
+            <tr>
+                <th rowspan="2">Leistungszeitraum</th>
+                <th rowspan="2" class="no-wrap">geleistete PT</th>
+                <th class="no-wrap center" [attr.colspan]="(contract | async)?.budgetDetails.length + 1">% Auslastung</th>
+            </tr>
+            <tr>
+                <th>Gesamt</th>
+                <th class="no-wrap" *ngFor="let detail of (contract | async)?.budgetDetails">
+                    {{detail.priceCategory}}
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let month of allowedMonths">
+                <td>
+                    {{month.split('-')[1]}}/{{month.split('-')[0]}}
+                </td>
+                <td class="no-wrap right">
+                    {{getDaysForMonth(month) | number: '1.3-3':'de'}}
+                </td>
+                <td class="no-wrap right rel">
+                    {{getDaysPercentageForMonth(month) | number: '1.1-1':'de'}} %
+                    <div class="gauge"
+                        [ngClass]="{red: getDaysPercentageForMonth(month) > getmonthPercentageForContract(month)}"
+                        [ngStyle]="{width: (getDaysPercentageForMonth(month) | number:'1.0-0') + '%'}">
+                    </div>
+                </td>
+                <td class="no-wrap right rel" *ngFor="let detail of (contract | async)?.budgetDetails">
+                    {{getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number: '1.1-1':'de'}} %
+                    <div class="gauge"
+                        [ngClass]="{red: getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) > getmonthPercentageForContract(month)}"
+                        [ngStyle]="{width: (getDaysPercentageForPriceCategoryAndMonth(detail.priceCategoryId, month) | number:'1.0-0') + '%'}">
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td><b>Gesamt</b></td>
+                <td class="no-wrap right">
+                    {{totalDays | number: '1.3-3':'de'}}
+                </td>
+                <td class="no-wrap right rel">
+                    {{totalSum / (contract | async)?.completeBudget.availableFinances * 100 | number: '1.1-1':'de'}} %
+                    <div class="gauge"
+                        [ngClass]="{red: 100 * totalSum / (contract | async)?.completeBudget.availableFinances > (partOfTime | async)}"
+                        [ngStyle]="{width: (100 * totalSum / (contract | async)?.completeBudget.availableFinances | number:'1.0-0') + '%'}">
+                    </div>
+                </td>
+                <td class="no-wrap right rel" *ngFor="let detail of (contract | async)?.budgetDetails">
+                    {{detail.availableFinances === 0 ? '-' : getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances * 100 | number: '1.1-1':'de'}} %
+                    <div class="gauge"
+                        [ngClass]="{red: (getPartOfBudgetForPriceCategory(detail.priceCategoryId, detail) | async) > (partOfTime | async)}"
+                        [ngStyle]="{width: (getPartOfBudgetForPriceCategory(detail.priceCategoryId, detail) | async | number:'1.0-0') + '%'}">
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</main>
+<footer>
+    <button type="button" class="selectable card" [routerLink]="['..']">Zur&uuml;ck zur &Uuml;bersicht</button>
+</footer>
+
