--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,17 @@
 .backdrop {
     z-index: 140;
 }
+
+#username {
+    display: none;
+    @media (min-width: 40rem) {
+        display: block;
+    }
+}
+
+header > button {
+    min-width: unset;
+    margin-left: 0.5rem;
+    margin-right: 0.2rem;
+    padding: 0.5rem 1rem;
+}
