--- a/frontend/src/app/contract-database-sync/contract-database-sync.component.scss
+++ b/frontend/src/app/contract-database-sync/contract-database-sync.component.scss
@@ -18,3 +18,9 @@ td:not(:first-child) {
     margin: 2rem;
     border: 1px solid darkgreen;
 }
+
+.selectable {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    width: calc(100% - 1rem);
+}
