--- a/frontend/src/app/contract-list/contract-list.component.scss
+++ b/frontend/src/app/contract-list/contract-list.component.scss
@@ -1,39 +1,68 @@
 .card {
-    & > div:first-of-type {
+    & > h2 {
         align-self: center;
-        padding-right: 1rem;
-        border-right: 1px double black;
-        margin-right: 1rem;
-        height: 100%;
-        font-size: 140%;
+        border-bottom:  double 1px black;
+        margin: 0 auto 0.5rem auto;
+        width: 100%;
+        padding-bottom: 0.5rem;
     }
-
     width: calc(100% - 3rem);
     align-items: flex-start;
     justify-content: left;
     height: unset;
     margin-right: 0;
     margin-bottom: 1rem;
+    flex-direction: column;
+    .card {
+        min-width: unset;
+    }
+    @media (min-width: 40rem) {
+        flex-direction: row;
 
+        & > h2 {
+            align-self: center;
+            padding-bottom: 0;
+            margin: unset;
+            width: unset;
+            border-bottom: none;
+            padding-right: 1rem;
+            border-right: 1px double black;
+            margin-right: 1rem;
+            height: 100%;
+        }
+    }
+    
     .operations {
-        border-left: double 1px black;
-        margin-left: 1rem;
-        padding-left: 1rem;
-        height: 100%;
+        border-top: double 1px black;
+        margin-top: 0.5rem;
+        padding-top: 0.5rem;
+        align-self: center;
+        min-width: 12.5rem;
+        width: 100%;
         button {
-            width: 100%;
+            width: calc(100% - 2rem);
+        }
+
+        @media (min-width: 40rem) {
+            border-top: unset;
+            margin-top: 0;
+            padding-top: 0;
+            border-left: double 1px black;
+            margin-left: 1rem;
+            padding-left: 1rem;
+            height: 100%;
+        }
+    }
+
+}
+
+.action-list {
+    @media (min-width: 60rem) {
+        display: flex;
+
+        .card {
+            width: unset;
+            flex: 1;
         }
     }
 }
-
-.overlay {
-    min-height: 30vh;
-    text-align: left;
-    @media (min-width: 30rem) {
-        min-width: 28rem;
-        h1 {
-            margin-top: 1.5rem;
-        }
-    }
-}
-
