--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -46,7 +46,6 @@ th {
     top: 0;
     left: 0;
     right: 0;
-    height: 3.75rem;
     display: flex;
     align-items: center;
     background-color: $main-blue;
@@ -64,11 +63,17 @@ th {
 
 .content {
     display: flex;
-    margin: 3.875rem auto 2rem;
     padding: 0 1rem;
     max-width: 60rem;
     flex-direction: column;
     align-items: center;
+    margin: 5rem auto 2rem;
+    @media (min-width: 27.25rem) {
+        margin: 4rem auto 2rem;
+    }
+    @media (min-width: 48rem) {
+        margin: 3.5rem auto 2rem;
+    }
 }
 
 .card-container {
